# calc2

./: CMakeLists.txt  build.sh  clean.bat  readme.md
src/: exec.cpp  exec.h  lexic.cpp  lexic.h  log.h  main.cpp  postfix.cpp  postfix.h  stream.h  syntax.cpp  syntax.h  token.cpp  token.h
